src/parser/snapshots/rbx_rsml__parser__tests__compiler_builtin_padding_three_args.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [
                0,
            ],
        },
    ),
    nodes: [
        Some(
            TreeNode {
                selector: Some(
                    "Frame",
                ),
                priority: None,
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {},
                },
                tweens: Attributes {
                    data: {},
                },
                child_rules: [
                    1,
                ],
                parent: Root,
            },
        ),
        Some(
            TreeNode {
                selector: Some(
                    "::UIPadding",
                ),
                priority: None,
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {
                        "PaddingBottom": UDim(
                            UDim {
                                scale: 0.0,
                                offset: 30,
                            },
                        ),
                        "PaddingLeft": UDim(
                            UDim {
                                scale: 0.0,
                                offset: 20,
                            },
                        ),
                        "PaddingRight": UDim(
                            UDim {
                                scale: 0.0,
                                offset: 20,
                            },
                        ),
                        "PaddingTop": UDim(
                            UDim {
                                scale: 0.0,
                                offset: 10,
                            },
                        ),
                    },
                },
                tweens: Attributes {
                    data: {},
                },
                child_rules: [],
                parent: Node(
                    0,
                ),
            },
        ),
    ],
    is_static: false,
}
