src/parser/snapshots/rbx_rsml__parser__tests__compiler_directive_static_alone.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: true,
}
