src/parser/snapshots/rbx_rsml__parser__tests__compiler_directive_static_with_macro_and_static_token.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {
                "brand": Variant(
                    Color3(
                        Color3 {
                            r: 1.0,
                            g: 0.0,
                            b: 0.0,
                        },
                    ),
                ),
            },
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: true,
}
